apps/monitoring/pushgateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
spec:
  selector:
    app.kubernetes.io/name: pushgateway
  ports:
    - port: 80
      targetPort: pushgateway
