apps/monitoring/pushgateway/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pushgateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: pushgateway
  policyTypes:
    - Egress
  egress: []
